fixed word wrap problem with no results text

--- a/css/WDIG.scss
+++ b/css/WDIG.scss
@@ -162,6 +162,7 @@ a.btn {
         font-size: 1.1em;
         color: $darkish_red;
         font-weight: 700;
+        margin-left: 4em;
     }
 }
 
